--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "leaflet": "^1.7.1",
     "register-service-worker": "^1.7.1",
+    "reset-css": "^5.0.1",
+    "sass-resources-loader": "^2.1.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-i18n": "^8.24.2",
+    "vue-router": "^3.2.0",
+    "vue2-leaflet": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
