--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.1",
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
     "register-service-worker": "^1.7.1",
