--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "reset-css": "^5.0.1",
     "sass-resources-loader": "^2.1.1",
