--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "register-service-worker": "^1.7.1",
     "reset-css": "^5.0.1",
     "sass-resources-loader": "^2.1.1",
