--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "experis",
+  "name": "pwa-aimmm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,22 +14,21 @@
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0",
     "register-service-worker": "^1.7.1",
     "reset-css": "^5.0.1",
     "sass-resources-loader": "^2.1.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.2",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
+    "vue-table-dynamic": "^0.4.5",
     "vue2-leaflet": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
